--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 <body>
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
-		<div class="container">	<a class="navbar-brand" href="#">Paddy's Cafe</a>
+		<div class="container">	<a class="navbar-brand" href="#">FlatHead Garage</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">	<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
@@ -32,7 +32,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-left">
-				<h1 class="mt-5">Welcome to Paddy's Cafe</h1>
+				<h1 class="mt-5">Welcome to FlatHead Garage</h1>
 				<p class="lead">Select your entrees from the menu below.</p>
 			</div>
 			<div id="results" class="col-lg-8 text-center order-3"></div>
