--- a/views/index.html
+++ b/views/index.html
@@ -33,7 +33,7 @@
 		<div class="row">
 			<div class="col-lg-12 text-left">
 				<h1 class="mt-5">Welcome to FlatHead Garage</h1>
-				<p class="lead">Select your entrees from the menu below.</p>
+				<p class="lead">Select your Services from the Catalog .</p>
 			</div>
 			<div id="results" class="col-lg-8 text-center order-3"></div>
 			<div class="col-lg-4 text-center order-2">
