--- a/views/css/fhgstyles.css
+++ b/views/css/fhgstyles.css
@@ -28,6 +28,8 @@ table, th, td {
      border-collapse: collapse;
      width:100%;
      box-shadow: 0 5px 15px;
+     background-color: white;
+     opacity: 0.7;
 }
  td, th {
      border: 1px solid #ced4da;
@@ -38,7 +40,7 @@ table, th, td {
      font-weight: bold;
 }
 .selected {
-            background-color: #dc3545;
+            background-color: #e60e2080;
             color: #FFF;
 }
  
