--- a/views/css/fhgstyles.css
+++ b/views/css/fhgstyles.css
@@ -43,4 +43,8 @@ table, th, td {
             background-color: #e60e2080;
             color: #FFF;
 }
- 
+.row{
+background-color:rgba(255, 255, 255, 0.247);
+
+opacity: 0,9;
+}
