--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<title>Flat Head Motor Garage</title>
+    <link rel="shortcut icon" type="image/png"href="../img/mechanic.PNG">
 	<!-- Bootstrap core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/fhgstyles.css" rel="stylesheet">
