--- a/views/index.html
+++ b/views/index.html
@@ -44,10 +44,10 @@
 				<form enctype="application/json" action="/post/json" method="post">
 					<div class="form-group">
 						<select class="form-control" name="sec_n">
-							<option value="0">Side Dishes</option>
-							<option value="1">Breakfast</option>
-							<option value="2">Lunch</option>
-							<option value="3">Dinner</option>
+							<option value="0">Engine Services</option>
+							<option value="1">Break Services</option>
+							<option value="2">Paint Services</option>
+							<option value="3">Car Wash</option>
 						</select>
 					</div>
 					<div class="form-group">
