--- a/views/index.html
+++ b/views/index.html
@@ -45,7 +45,7 @@
 					<div class="form-group">
 						<select class="form-control" name="sec_n">
 							<option value="0">Engine Services</option>
-							<option value="1">Break Services</option>
+							<option value="1">Brake Services</option>
 							<option value="2">Paint Services</option>
 							<option value="3">Car Wash</option>
 						</select>
