--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<title>Flat Head Motor Garage</title>
-    <link rel="shortcut icon" type="image/png"href="../img/mechanic.PNG">
+    <link rel="icon" type="image/png"href="../img/mechanic.PNG">
 	<!-- Bootstrap core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/fhgstyles.css" rel="stylesheet">
@@ -16,6 +16,7 @@
 <body>
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+    <link rel="shortcut icon" type="image/png"href="../img/mechanic.PNG">
 		<div class="container">	<a class="navbar-brand" href="#">FlatHead Garage</a>
 			
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">	<span class="navbar-toggler-icon"></span>
