--- a/views/about.html
+++ b/views/about.html
@@ -23,8 +23,8 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active"><a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a></li>
-					<li class="nav-item"><a class="nav-link" href="#">About</a></li>
+					<li class="nav-item active"><a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a></li>
+					<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Services</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
 				</ul>
@@ -38,16 +38,26 @@
 			<div class="col-lg-12 text-left">
             
 			
-					<div class="form-group">
-						<input class="form-control" type="text" name="item" placeholder="Item">
-					</div>
-					<div class="form-group">
-						<input class="form-control" type="text" name="price" placeholder="Price">
-					</div>
-					<button type="submit" class="btn btn-primary btn-block">Submit</button>
-				</form>
-                    <button id="delete" class="btn btn-block btn-danger">Delete</button>
-                    <p class="text-muted">To delete an entree, click the required row first</p>
+					<h1 class="mt-5" >Welcome to FlatHead Garage</h1>
+				<p class="lead">he auto parts stores or motor-factors that also maintain service operations. This is not common in the United Kingdom but more common in the US.
+Automobile repair workshops that are independently owned and operated businesses.</p>
+<p class="lead"> These may also include regional or national chains and franchises including OEM (Original Equipment Manufacturer) repair sites such as in car dealerships.
+<p/> 
+<p class="lead">In the United States, these sites are commonly certified by their respective manufacturer to perform warranty and recall repairs by that manufacturer or distributor such as oil changes and other preventative maintenance items. 
+Independent automobile repair shops in the US may also achieve certification through manufacturer sponsored programs.[1]
+European Union law (The EC Block Exemption Regulation 1400/2002 (October 2003[2])) permits motorists more flexibility in
+ selecting where their car is serviced. Maintenance and service work does not have to be done by the main dealer providing 
+ the garage uses Original Equipment 'Matching Quality' parts follows the manufacturer's service schedules.</p>
+ <p class="lead"> The Block Exemption Regulation (BER) covers service and maintenance during the warranty period and prohibits vehicle manufacturers’ warranties from including restrictive conditions.
+Specialty automobile repair shops are shops specializing in certain parts such as brakes, mufflers and exhaust systems, transmissions, body parts, automobile electrification, automotive air conditioner 
+repairs, automotive glass repairs and installation, and wheel alignment or those who only work on certain brands of vehicle or vehicles from certain continents of the world.
+ </p>
+ <p class="lead"> There are also automotive repair shops that specialize in vehicle modifications and customization. Oftentimes,
+     various specialized auto repair shops will have varied infrastructure and facilities (for specific jobs or vehicles), as well as technicians and mechanics with different qualifications.
+      Online automobile repair shops (mobile mechanics) providing doorstep repair services and home delivery of new and used auto parts of different late model and classic cars whose parts are not widely available in the market.
+      In countries such as the UK, the mobile car body repair sectors has experienced high growth by way of mobile SMART Repair companies providing mobile car body repair services, such as Bumper Repairs, auto body repair,
+       paintless dent repair and paintwork defect repairs to private and commercial consumers,
+        typically within the industry framework of refinishing vehicle damage on a localised basis, where the area of damage being repaired is not in excess of an A4 sheet of paper.</p>
 			</div>
 		</div>
 	</div>
