--- a/views/services.html
+++ b/views/services.html
@@ -26,7 +26,7 @@
 					<li class="nav-item active"><a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a></li>
 					<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
 					<li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+					<li class="nav-item"><a class="nav-link" href="#">Car pics</a></li>
 				</ul>
 			</div>
 		</div>
@@ -38,7 +38,11 @@
 			<div class="col-lg-12 text-left">
             
 			
-					<h1 class="mt-5" >Welcome to FlatHead Garage</h1>
+					<h1 class="mt-5" >FlatHead Garage Services </h1>
+                    <h2 class="mt-5" >Full angine replacement:           $1000,00 </h2>
+                    <h2 class="mt-5" >Full Brake system chek up:         $100,00 </h2>
+                    <h2 class="mt-5" >Full fuell system chek up:         $400,00 </h2>
+                    <h2 class="mt-5" >Full internal saloon sanitation    $800,00 </h2>
 
 			</div>
 		</div>
