--- a/views/carpics.html
+++ b/views/carpics.html
@@ -26,7 +26,7 @@
 					<li class="nav-item active"><a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a></li>
 					<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
 					<li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Car pics</a></li>
+					<li class="nav-item"><a class="nav-link" href="carpics.html">Car pics</a></li>
 				</ul>
 			</div>
 		</div>
@@ -38,11 +38,16 @@
 			<div class="col-lg-12 text-left">
             
 			
-					<h1 class="mt-5" >FlatHead Garage Services </h1>
-                    <h2 class="mt-5" >Full angine replacement:           $1000,00 </h2>
-                    <h2 class="mt-5" >Full Brake system chek up:         $100,00 </h2>
-                    <h2 class="mt-5" >Full fuell system chek up:         $400,00 </h2>
-                    <h2 class="mt-5" >Full internal saloon sanitation    $800,00 </h2>
+				<h1 class="mt-5" >FlatHead Garage Services </h1>
+                   <div id="sliderbox">
+                        <img src="../img/car_1.jpg"/>
+                        <img src="../img/car_2.jpg"/>
+                        <img src="../img/car_3.png"/>
+                        <img src="../img/car_4.webp"/>
+                        <img src="../img/car_5.jpg"/>
+                        <img src="../img/car_6.jpg"/>
+                        <img src="../img/car_6.jpg"/>
+                   </div>
 
 			</div>
 		</div>
