--- a/views/css/fhgstyles.css
+++ b/views/css/fhgstyles.css
@@ -49,3 +49,14 @@ background-color:rgba(255, 255, 255, 0.247);
 
 opacity: 0,9;
 }
+.sliderbox{
+    position: relative;
+    width: 500px;
+
+
+}
+.sliderbox img{
+    float: left;
+
+
+}
