--- a/views/services.html
+++ b/views/services.html
@@ -26,7 +26,7 @@
 					<li class="nav-item active"><a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a></li>
 					<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
 					<li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Car pics</a></li>
+					<li class="nav-item"><a class="nav-link" href="carpics.html">Car pics</a></li>
 				</ul>
 			</div>
 		</div>
