--- a/views/carpics.html
+++ b/views/carpics.html
@@ -39,15 +39,17 @@
             
 			
 				<h1 class="mt-5" >FlatHead Garage Services </h1>
+                <div id="outerbox">
                    <div id="sliderbox">
-                        <img src="../img/car_1.jpg"/>
-                        <img src="../img/car_2.jpg"/>
-                        <img src="../img/car_3.png"/>
-                        <img src="../img/car_4.webp"/>
-                        <img src="../img/car_5.jpg"/>
-                        <img src="../img/car_6.jpg"/>
-                        <img src="../img/car_6.jpg"/>
+                        <img src="../img/car_1.jpg" height="500"width="800"/>
+                        <img src="../img/car_2.jpg"height="500"width="800"/>
+                        <img src="../img/car_3.png"height="500"width="800"/>
+                        <img src="../img/car_4.webp"height="500"width="800"/>
+                        <img src="../img/car_5.jpg"height="500"width="800"/>
+                        <img src="../img/car_6.jpg"height="500"width="800"/>
+                        <img src="../img/car_7.jpg"height="500"width="800"/>
                    </div>
+                </div>
 
 			</div>
 		</div>
