--- a/views/css/fhgstyles.css
+++ b/views/css/fhgstyles.css
@@ -4,7 +4,7 @@ html {
 }
 body {
     background-image: url(../img/car.jpg);
-    background-size: 1800px 1400px;
+    background-size: 100%;
     background-repeat: no-repeat;
   /* Margin bottom by footer height */
   margin-bottom: 60px;
@@ -49,14 +49,25 @@ background-color:rgba(255, 255, 255, 0.247);
 
 opacity: 0,9;
 }
-.sliderbox{
-    position: relative;
-    width: 500px;
-
-
+#outerbox{
+    width: 900px;
+    overflow: hidden;
 }
-.sliderbox img{
+#sliderbox{
+    position: relative;
+    width: 5900px;
+    animation-name: janelas;
+    animation-duration: 20s;
+  
+}
+#sliderbox img{
     float: left;
-
+}
+@keyframes janelas{
+    fron{
+        left: 0px;
+    }to {
+        left: -2400px;
+    }
 
 }
