--- a/views/index.html
+++ b/views/index.html
@@ -8,8 +8,9 @@
 	<meta name="author" content="">
 	<title>Flat Head Motor Garage</title>
     <link rel="icon" type="image/png"href="../img/mechanic.PNG">
-	<!-- Bootstrap core CSS -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
+<!-- B	ootstrap core fhgstyles.css used to re-style the pages  -->
+	<!--giving a nice vew of the web for the user -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/fhgstyles.css" rel="stylesheet">
 </head>
 
