--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<title>Flat Head Motor Garage</title>
+    <!--is is the web site icon, the code was foud on you tube  -->
     <link rel="icon" type="image/png"href="../img/mechanic.PNG">
 <!-- B	ootstrap core fhgstyles.css used to re-style the pages  -->
 	<!--giving a nice vew of the web for the user -->
@@ -24,6 +25,7 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
+                <!--is is the web site links, the code was foud on w3schools  -->
 					<li class="nav-item active"><a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a></li>
 					<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
 					<li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
@@ -32,7 +34,7 @@
 			</div>
 		</div>
 	</nav>
-	<!-- Page Content -->
+	<!-- page contend where the user goint to insert and delete all the items -->
 	<div class="container">
     
 		<div class="row">
@@ -69,7 +71,7 @@
 		<div class="container">	<span class="text-muted">&copy; 2019</span>
 		</div>
 	</footer>
-	<!-- Bootstrap core JavaScript -->
+	<!-- it closes the Bootstrap and JavaScript tag -->
 	<script src="jquery/jquery.min.js"></script>
 	<script src="jquery/table.js"></script>
 	<script src="js/bootstrap.min.js"></script>
